# SharedServer

./: .gitignore  CMakeLists.txt  Findexternpro.cmake~  JenkinsFile  Jenkinsfile  README.md  database.txt  example.cpp
Documentation/: GroupLeaders.txt  README.md
Documentation/Coding Standard/: CodingStandard.tex
Documentation/Hearts Logic/: SDD_Hearts_Server.tex
Documentation/Pull Request/: main.tex
Documentation/SDD/: Main.tex  SDD.tex
Documentation/SDD/PlayerAPI/: PlayerAPI.tex
Documentation/SDD/PlayerAPI/PlantUMLCode/: CrazyEightsUML  HeartsUML  README.md  SpadesUML
Documentation/SDD/graphics/: README.md
Documentation/SDD/sections/: CrazyEightsGameLogic.tex  HeartsGameLogic.tex  PlayerAPI.tex  Policy.tex  README.md  ServerModel.tex  SpadesLogic.tex
Documentation/Spades_Logic/: Spades_Logic.tex
Documentation/Spades_Logic/sections/: Spades_Logic_Introduction.tex  Spades_Logic_Logic.tex  Spades_Logic_Rules.tex
PlayerAPI/: Card.cpp  Card.hpp  Field.cpp  Game.h  Player.cpp  Player.h  Player.hpp
source/: CMakeLists.txt  Lobby.cpp  Lobby.hpp  Server.cpp  Server.hpp  main.cpp
source/AI/: AI.cpp  AI.hpp  CMakeLists.txt  CrazyEightsSmartAI.cpp
source/ClientTools/Messages/: GameMessage.hpp
source/ClientTools/NetworkInterface/: ClientNetworkInterface.hpp
source/CrazyEightsLogic/: CMakeLists.txt  CrazyEightsLogic.cpp  CrazyEightsLogic.hpp
source/GameLogic/: CMakeLists.txt  CrazyEightsLogic.cpp  CrazyEightsLogic.hpp  HeartsGame.cpp  HeartsGame.hpp  SpadesLogic.cpp  SpadesLogic.hpp
source/HeartsLogic/: CMakeLists.txt  HeartsGame.cpp  HeartsGame.hpp  main.cpp
source/Lobby/: CMakeLists.txt  Lobby.hpp
source/Messages/: CMakeLists.txt  GameMessage.hpp  LobbyGame.hpp  Message.hpp
source/NetworkInterface/: CMakeLists.txt  ClientNetworkInterface.cpp  ClientNetworkInterface.hpp  GeneralMessage.cpp  GeneralMessage.hpp  NetworkInterface.cpp  NetworkInterface.h  NetworkInterface.hpp  PlayerNetworking.cpp  README.txt  ServerNetworkInterface.cpp  ServerNetworkInterface.hpp  TCPConnection.cpp  TCPConnection.h  TCPConnection.hpp  mockClient.cpp  mockServer.cpp
source/PlayerAPI/: CMakeLists.txt  Card.cpp  Card.hpp  Game.hpp  LobbyGame.hpp  Player.cpp  Player.hpp  PlayerNetworking.cpp  main.cpp
source/SpadesLogic/: CMakeLists.txt  Player.cpp  ReadMe.md  ReadMe.txt  SpadesLogic.cpp  SpadesLogic.hpp  card.cpp  card.hpp  game.hpp  player.hpp  spades.cpp
test/: CMakeLists.txt  Test.cpp
